--- a/WORDLE v.2/MainWindow.xaml
+++ b/WORDLE v.2/MainWindow.xaml
@@ -1,34 +1,35 @@
-﻿<Window x:Class="WORDLE_v2.MainWindow"
+﻿<!--0xRETRO https://github.com/0xr3tro-->
+<Window x:Class="WORDLE_v2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Wordle Game" Height="450" Width="400">
+        Title="Wordle Game" Height="550" Width="500" Background="#121212">
     <Grid>
         <!-- Siatka na litery 5x5 z ustalonym stylem -->
         <Grid Name="GridLetters" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="60px" />
+                <RowDefinition Height="60px" />
+                <RowDefinition Height="60px" />
+                <RowDefinition Height="60px" />
+                <RowDefinition Height="60px" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="50px" />
+                <ColumnDefinition Width="50px" />
+                <ColumnDefinition Width="50px" />
+                <ColumnDefinition Width="50px" />
+                <ColumnDefinition Width="50px" />
             </Grid.ColumnDefinitions>
 
             <!-- Definicja stylu dla komórek -->
             <Grid.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="BorderBrush" Value="Black" />
+                    <Setter Property="BorderBrush" Value="#1E1E1E" />
                     <Setter Property="BorderThickness" Value="2" />
                     <Setter Property="CornerRadius" Value="5" />
                     <Setter Property="Margin" Value="5" />
                     <Setter Property="Padding" Value="10" />
-                    <Setter Property="Background" Value="White" />
+                    <Setter Property="Background" Value="#2A2A2A" />
                 </Style>
 
                 <Style TargetType="TextBlock">
@@ -36,100 +37,100 @@
                     <Setter Property="FontWeight" Value="Bold" />
                     <Setter Property="HorizontalAlignment" Value="Center" />
                     <Setter Property="VerticalAlignment" Value="Center" />
+                    <Setter Property="Foreground" Value="#2A2A2A" />
+                    <Setter Property="Background" Value="#2A2A2A" />
                 </Style>
             </Grid.Resources>
 
-            <!-- Komórki siatki 5x5 z Borders i TextBlocks -->
             <!-- Rząd 0 -->
             <Border Grid.Row="0" Grid.Column="0">
-                <TextBlock Name="Cell00" Text=" " />
+                <TextBlock Name="Cell00" Text="" />
             </Border>
             <Border Grid.Row="0" Grid.Column="1">
-                <TextBlock Name="Cell01" Text=" " />
+                <TextBlock Name="Cell01" Text="" />
             </Border>
             <Border Grid.Row="0" Grid.Column="2">
-                <TextBlock Name="Cell02" Text=" " />
+                <TextBlock Name="Cell02" Text="" />
             </Border>
             <Border Grid.Row="0" Grid.Column="3">
-                <TextBlock Name="Cell03" Text=" " />
+                <TextBlock Name="Cell03" Text="" />
             </Border>
             <Border Grid.Row="0" Grid.Column="4">
-                <TextBlock Name="Cell04" Text=" " />
+                <TextBlock Name="Cell04" Text="" />
             </Border>
 
             <!-- Rząd 1 -->
             <Border Grid.Row="1" Grid.Column="0">
-                <TextBlock Name="Cell10" Text=" " />
+                <TextBlock Name="Cell10" Text="" />
             </Border>
             <Border Grid.Row="1" Grid.Column="1">
-                <TextBlock Name="Cell11" Text=" " />
+                <TextBlock Name="Cell11" Text="" />
             </Border>
             <Border Grid.Row="1" Grid.Column="2">
-                <TextBlock Name="Cell12" Text=" " />
+                <TextBlock Name="Cell12" Text="" />
             </Border>
             <Border Grid.Row="1" Grid.Column="3">
-                <TextBlock Name="Cell13" Text=" " />
+                <TextBlock Name="Cell13" Text="" />
             </Border>
             <Border Grid.Row="1" Grid.Column="4">
-                <TextBlock Name="Cell14" Text=" " />
+                <TextBlock Name="Cell14" Text="" />
             </Border>
 
             <!-- Rząd 2 -->
             <Border Grid.Row="2" Grid.Column="0">
-                <TextBlock Name="Cell20" Text=" " />
+                <TextBlock Name="Cell20" Text="" />
             </Border>
             <Border Grid.Row="2" Grid.Column="1">
-                <TextBlock Name="Cell21" Text=" " />
+                <TextBlock Name="Cell21" Text="" />
             </Border>
             <Border Grid.Row="2" Grid.Column="2">
-                <TextBlock Name="Cell22" Text=" " />
+                <TextBlock Name="Cell22" Text="" />
             </Border>
             <Border Grid.Row="2" Grid.Column="3">
-                <TextBlock Name="Cell23" Text=" " />
+                <TextBlock Name="Cell23" Text="" />
             </Border>
             <Border Grid.Row="2" Grid.Column="4">
-                <TextBlock Name="Cell24" Text=" " />
+                <TextBlock Name="Cell24" Text="" />
             </Border>
 
             <!-- Rząd 3 -->
             <Border Grid.Row="3" Grid.Column="0">
-                <TextBlock Name="Cell30" Text=" " />
+                <TextBlock Name="Cell30" Text="" />
             </Border>
             <Border Grid.Row="3" Grid.Column="1">
-                <TextBlock Name="Cell31" Text=" " />
+                <TextBlock Name="Cell31" Text="" />
             </Border>
             <Border Grid.Row="3" Grid.Column="2">
-                <TextBlock Name="Cell32" Text=" " />
+                <TextBlock Name="Cell32" Text="" />
             </Border>
             <Border Grid.Row="3" Grid.Column="3">
-                <TextBlock Name="Cell33" Text=" " />
+                <TextBlock Name="Cell33" Text="" />
             </Border>
             <Border Grid.Row="3" Grid.Column="4">
-                <TextBlock Name="Cell34" Text=" " />
+                <TextBlock Name="Cell34" Text="" />
             </Border>
 
             <!-- Rząd 4 -->
             <Border Grid.Row="4" Grid.Column="0">
-                <TextBlock Name="Cell40" Text=" " />
+                <TextBlock Name="Cell40" Text="" />
             </Border>
             <Border Grid.Row="4" Grid.Column="1">
-                <TextBlock Name="Cell41" Text=" " />
+                <TextBlock Name="Cell41" Text="" />
             </Border>
             <Border Grid.Row="4" Grid.Column="2">
-                <TextBlock Name="Cell42" Text=" " />
+                <TextBlock Name="Cell42" Text="" />
             </Border>
             <Border Grid.Row="4" Grid.Column="3">
-                <TextBlock Name="Cell43" Text=" " />
+                <TextBlock Name="Cell43" Text="" />
             </Border>
             <Border Grid.Row="4" Grid.Column="4">
-                <TextBlock Name="Cell44" Text=" " />
+                <TextBlock Name="Cell44" Text="" />
             </Border>
         </Grid>
 
-        <!-- Interaktywne elementy gry: pole tekstowe i przyciski -->
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,350,0,0" RenderTransformOrigin="0.507,0.457">
-            <TextBox Name="WordInput" Width="200" FontSize="18" HorizontalAlignment="Center" Margin="10" />
-            <Button Content="Sprawdź słowo" Width="150" Click="CheckWord" HorizontalAlignment="Center" Margin="10" />
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,350,0,0">
+            <TextBox Name="WordInput" Width="200" FontSize="18" HorizontalAlignment="Center" Margin="10" Background="#2A2A2A" Foreground="White" BorderBrush="#1E1E1E" BorderThickness="2" />
+            <Button Content="Sprawdź słowo" Width="150" Click="CheckWord" HorizontalAlignment="Center" Margin="10" Background="#3A3A3A" Foreground="White" BorderBrush="#1E1E1E" BorderThickness="2" />
             <TextBlock Name="GameMessage" FontSize="16" HorizontalAlignment="Center" Foreground="Red" />
         </StackPanel>
     </Grid>
